# resourceful-quiver

./: .gitignore  README.md  WhatToDo.MD  initial_feature_engineering.py  pyproject.toml
data/: ac_tows.csv  apt_updated.parquet  fuel_train.parquet
data/metadata/: final_metadata.json
notebooks/: FinalSubmission.ipynb  RankSubmission.ipynb  TrainModelAndSubmit.ipynb  compare_data.ipynb  fuel_data_check.ipynb  lgbm_train.ipynb  make_dataset.ipynb  manual_fill_data.ipynb  parallel_proc_test.ipynb  plot_test.ipynb  stats.ipynb  submission_ZP.ipynb
scripts/: check_submission_ver.sh  create_lgbm_data.py  hyperparamtuning.py  preproc_best.py  preproc_v0.py  preproc_v0_wind.py  preproc_v1.py  preproc_v2 wind.py  preproc_v2.py  tmp_fix.py
src/resqu/: __init__.py  cli.py  data.py  energy.py  fill_gap.py  make_dataset.py  plotter.py  preprocessor.py
src/resqu/transformer/: dataset.py  dataset_infer.py  get_stats.py  infer_rank.py  plot_loos.py  train.py
